# poc-tauri-python

./: .editorconfig  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  updates.json  vite.config.ts
.husky/: pre-commit
plugins/window-theme/src/: lib.rs
server/: main.py
server/inference/: infer_text_api.py
src/: app.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/src/: main.rs  meta.rs
src-tauri/src/cmd/: general.rs  mod.rs  quotes.rs
src-tauri/src/menu/: app_menu.rs  menu_item.rs  mod.rs
src-tauri/src/utils/: config.rs  fetcher.rs  mod.rs  updater.rs  webview.rs
src/components/: theme-switcher.tsx
src/components/ui-controls/: controls.tsx
src/hooks/: useForm.ts
src/libraries/: utils.ts
src/screens/: not-found.tsx  welcome.tsx
