[package]
name = "tauri-python"
version = { workspace = true }
description = "A Tauri application"
authors = ["you"]
license = "MIT OR Apache-2.0"
repository = "http://github.com/zero-one-group/poc-tauri-python"
rust-version = { workspace = true }
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true }
dotenv-build = "^0.1.1"

[dependencies]
tauri = { workspace = true }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "colored",
] }
plugin-window-theme = { path = "../plugins/window-theme" }
anyhow = "^1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "^1.34", features = ["macros", "time"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
machine-uid = "0.5.1"
simple-home-dir = "^0.3"
log = "^0.4"
ts-rs = "^7.0"
command-group = "5.0.1"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.25.0" }
objc = { version = "0.2.7" }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=0.18.2", features = [ "v2_22" ] }

# Updater plugin only for desktop apps
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
